--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			background-color: #000;
+			background-color: #1a1a1a;
 			width: 100%;
 		}
 
@@ -36,9 +36,10 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			width: 100%;
 			flex-direction: column;
 			height: 100vh;
-			background-color: #000;
+			background-color: #1a1a1a;
 		}
 
 		figure img{
@@ -51,96 +52,91 @@
 		}
 
 		.container{
+			margin: 1.5em 4em;
+		}
+
+		.container h1, .container p{
 			text-align: center;
-			margin: 50px;
-		}
-
-		.container h1{
-			font-size: 25px;
-		}
-
-		.container p{
-			padding-top: 20px;
-			margin: 0 150px;
+			padding: 10px;
 		}
 
 		.skills{
 			display: flex;
 			align-items: center;
-			justify-content: center;
+			justify-content: space-around; 
 		}
 
-		.skills h2{
-			margin: 20px 80px 0;
+		.skill{
+			margin: 10px;
 			background-color: #f1f1f1;
-			padding: 20px;
+			padding: 10px 20px;
 			transition: 0.3s ease;
 		}
 
-		.skills h2:hover{
-			background-color: #000;
+		.skill:hover{
+			background-color: #203138;
 			color: #fff;
 			cursor: pointer;
 		}
 
-		.project{
+		.projects{
 			display: flex;
-			justify-content: space-around;
+			justify-content: center;
 			align-items: center;
 			flex-wrap: wrap;
 		}
 
-		.project h4{
+		.project{
 			width: 45%;
-			padding: 20px;
+			text-align: center;
+			margin: 15px;
 		}
 
-		.project h4 a{
+		.project a{
 			text-decoration: none;
 			color: #000;
 			font-weight: 600;
 		}
 
-		.project h4 a:hover{
+		.project a:hover{
 		   border-bottom: 2px solid black;
 		   border border-bottom-width: thick;	
 		}
 
-		footer{
-			background-color: #000;
-			width: 100%;
+		.footer{
+			background-color: #1a1a1a;
+			margin-top: 15px;
+			padding: px;
 		}
 
-		footer h1{
+		.footer section{
+			margin: 10px 25%;
+		}
+
+		.footer h1{
 			color: #fff;
 			text-align: center;
 			padding: 20px;
 		}
 
-		footer form{
-			align-items: center;
-			flex-direction: column;
-			display: flex;	
+		input[type=submit]:hover{
+			color: #fff;
+			background-color: #203138;
+			border: none;
 		}
 
-		input[type=text], input[type=email]{
-			padding: 10px 250px 10px 20px;
-			border-radius: 10px;
+		input[type=text], input[type=email], textarea, input[type=submit]{
+			width: 100%;
+			padding: 12px 20px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
 		}
 
-		textarea{
-			padding: 20px 145px;
-			border-radius: 10px;
-		}
-
-		input[type=submit]{
-			padding: 10px 215px;
-			border-radius: 10px;
-		}
-
-		input[type=text], input[type=email], textarea, input[type=button]{
-			margin: 10px;
-			
+		@media(max-width: 480px){
+			.skills{
+				flex-direction: column;
+			}
 		}
 	</style>
 </head>
@@ -167,9 +163,9 @@
 			<p>I have great experience and i'm skilled in the below programming languages.</p>
 
 			<section class="skills">
-				<h2>HTML</h2>
-				<h2>CSS</h2>
-				<h2>JavaScipt</h2>
+				<section class="skill"><h2>HTML</h2></section>
+				<section class="skill"><h2>CSS</h2></section>
+				<section class="skill"><h2>JavaScipt</h2></section>
 			</section>
 		</section>
 
@@ -177,16 +173,16 @@
 			<h1>PROJECTS</h1>
 			<p>I've worked on different projects of which you can access through the following links below. My projects are of great styling and are built using the latest technologies.</p>
 
-			<section class="project">
-				<h4><a href="#">Project 1: Landing page</a></h4>
-				<h4><a href="#">Project 2: Summary page</a></h4>
-				<h4><a href="#">Project 3: Music page</a></h4>
-				<h4><a href="#">Project 4: Portfolio page</a></h4>
+			<section class="projects">
+				<h4 class="project"><a href="#">Project 1: about page</a></h4>
+				<h4 class="project"><a href="#">Project 2: Home page</a></h4>
+				<h4 class="project"><a href="#">Project 3: Music page</a></h4>
+				<h4 class="project"><a href="#">Project 4: Login page</a></h4>
 			</section>
 		</section>
 	</section>
 
-	<footer>
+	<footer class="footer">
 		<h1>CONTACT ME</h1>
 		<form name="contact" method="POST" data-netlify="true">
 			<section>
